--- a/Projects/CSS Final Project/css-final-1.html
+++ b/Projects/CSS Final Project/css-final-1.html
@@ -159,7 +159,7 @@
                                 <div class="card">
                                       
                                         
-                                        <div class="flexCenter jcsb">
+                                        <div class="flex-center jcsb">
                                                 <span class="material-icons cardimage couch colorWhite">weekend</span>
                                                 <div>
                                                         <h3 class="text-grey">Bookings</h3>
@@ -171,7 +171,7 @@
                                                 <hr>
                                                 <div class="flex-center">
                                                         <span class="material-icons text-gray">warning</span>
-                                                        <p class="text-gray">Get more space</p>
+                                                        <p class="text-grey">Get more space</p>
                                                 </div>
                                         </div>  
                                 </div>
