--- a/Projects/CSS Final Project/css-final-1.html
+++ b/Projects/CSS Final Project/css-final-1.html
@@ -86,7 +86,7 @@
                 <main>
                         <div class="glob margin">
                                 <div>
-                                        <span class="material-icons">language</span>
+                                        <span class="material-icons globalImg">language</span>
                                         <h1>Global Sales by Top Locations</h1>
 
 
