--- a/Projects/CSS Final Project/css-final-1.html
+++ b/Projects/CSS Final Project/css-final-1.html
@@ -21,7 +21,7 @@
 
                         <div class="aside-elements">
 
-                                <li class="pink"><span class="material-icons" title="Dashboard">dashboard
+                                <li class="red"><span class="material-icons" title="Dashboard">dashboard
                                         </span>Dashboard <div class="more-icon"><span
                                                         class="material-icons">expand_more</span> </div>
                                 </li>
@@ -69,7 +69,7 @@
                         <div class="more">
                                 <span title="Dashboard" class="material-icons">more_vert</span>
                         </div>
-                        <p>Dashboard</p>
+                        <p class="dsh">Dashboard</p>
 
                         <div class="searchIcons">
                                 <input type="text" placeholder="Search">
