--- a/Projects/CSS Final Project/css-final-1.html
+++ b/Projects/CSS Final Project/css-final-1.html
@@ -21,7 +21,7 @@
 
                         <div class="aside-elements">
 
-                                <li class="red"><span class="material-icons" title="Dashboard">dashboard
+                                <li class="pink"><span class="material-icons" title="Dashboard">dashboard
                                         </span>Dashboard <div class="more-icon"><span
                                                         class="material-icons">expand_more</span> </div>
                                 </li>
