--- a/Assigments/JAVASCRIPT/Log In/login.html
+++ b/Assigments/JAVASCRIPT/Log In/login.html
@@ -10,8 +10,8 @@
 <body>
     <script>
 
-        if  username = prompt("Enter your username:");
-       if password = prompt("Enter your password:");
+        let  username = prompt("Enter your username:");
+       let password = prompt("Enter your password:");
 
 
         if (username === "admin" && password == "12341234") {
@@ -24,15 +24,6 @@
 
 
 
-        if username = prompt("Enter your username:");
-        if password = prompt("Enter your password:");
-
-
-        if (username !== "admin" || password !== "12341234") {
-            console.log("Wrong credentials. Please try again.");
-        } else {
-            console.log("Welcome!");
-        }
     </script>
 </body>
 
