--- a/Assigments/JAVASCRIPT/Vowels and Consonants/v-c.html
+++ b/Assigments/JAVASCRIPT/Vowels and Consonants/v-c.html
@@ -12,9 +12,9 @@ document.addEventListener('keypress', (e) => {
   let letter = e.key;
 
   
-  if (letter.toLowerCase() === 'a' || letter.toLowerCase() === 'e' || 
-      letter.toLowerCase() === 'i' || letter.toLowerCase() === 'o' || 
-      letter.toLowerCase() === 'u') {
+  if (letter.toLowerCase() == 'a' || letter.toLowerCase() == 'e' || 
+      letter.toLowerCase() == 'i' || letter.toLowerCase() == 'o' || 
+      letter.toLowerCase() == 'u') {
     console.log("You entered a vowel!");
   }
 
