--- a/Assigments/JAVASCRIPT/grade/grade.html
+++ b/Assigments/JAVASCRIPT/grade/grade.html
@@ -10,27 +10,35 @@
 <body>
     <script>
         let points = prompt("Please enter the number of points you got in the test (0-100):");
+        let grade;
 
-        if ((points) || points < 0 || points > 100) {
-            console.log("There was an error in your input");
-        } 
-        else {
-            let grade = 0;
+       if (points <=0) {
+        grade = 'error';
+       }
 
-            if (points >= 0 && points <= 19) {
-                grade = 1;
-            } else if (points >= 20 && points <= 39) {
-                grade = 2;
-            } else if (points >= 40 && points <= 59) {
-                grade = 3;
-            } else if (points >= 60 && points <= 79) {
-                grade = 4;
-            } else if (points >= 80 && points <= 100) {
-                grade = 5;
-            }
+       else if (points < 20){
+        grade = 1;
+       }
 
-            console.log(`Based on your points, you have achieved a grade of  ${grade}`);
-        }
+       else if (points < 40){
+        grade = 2;
+       }
+
+       else if (points < 60){
+        grade = 3;
+       }
+
+       else if (points < 80){
+        grade = 4;
+       }
+
+       else if (points < 100){
+        grade = 5;
+       }
+
+       else{
+        grade = 'error'
+       }
     </script>
 </body>
 
