--- a/Assigments/JAVASCRIPT/odd or even/odd-even.html
+++ b/Assigments/JAVASCRIPT/odd or even/odd-even.html
@@ -8,22 +8,15 @@
 <body>
     <script>
         
-let userInput = prompt("Enter a number:");
 
+        let number = parseInt(prompt(`shkruani nje numer`))
+        if (number % 2== 0){
+            alert(`numri juaj eshte cift`);
+        }
 
-let number = parseInt(userInput);
-
-
-if (number) {
-    console.log("Please enter a valid integer.");
-} else {
-    
-    if (number % 2 === 0) {
-        console.log(number + " is even.");
-    } else {
-        console.log(number + " is odd.");
-    }
-}
+        else {
+            alert(`numri juaj eshte tek`);
+        }
 
     </script>
 </body>
